Created a BudgetVisionUser class using class declaration.

--- a/BudgetVision.html
+++ b/BudgetVision.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <script src="BudgetVision.js"></script>
+
 <head>
     <link rel="BudgetVision stylesheet" href="BudgetVision.css">
 </head>
@@ -118,7 +119,7 @@
             <a id="feedback"></a>
             <textarea id="email content" placeholder="Write your questions or feedback here. Inquiries will be answered within 3-5 business days." rows="10" cols="100"></textarea>
             <br><br>
-            <button id="email button" onclick="sendEmailFunction();" type="button">Send Email</button>
+            <button id="email button" onclick="sendEmail();" type="button">Send Email</button>
     </div>
     <hr>
 
